<resources>
    <string name="app_name">FlashcardSystent</string>
    <string name="title_home">Graj</string>
    <string name="title_dashboard">Zestawy</string>
    <string name="title_summary">Statystyki</string>

    <string name="answer_1">Odpowiedź 1</string>
    <string name="answer_2">Odpowiedź 2</string>
    <string name="answer_3">Odpowiedź 3</string>
    <string name="answer_4">Odpowiedź 4</string>
    <string name="quiz_question_placeholder">Pytanie</string>

    <string name="app_logo">Logo aplikacji</string>
    <string name="mode_classic">Tryb klasyczny</string>
    <string name="mode_quiz">Quiz</string>
    <string name="home_description">Wybierz tryb nauki i rozpocznij przygodę z fiszkami!</string>
    <string name="button_browse_mode">Przeglądaj fiszki</string>
    <string name="too_few_flashcards">Zbyt mało fiszek w zestawie</string>
    <string name="correct_answers_with_value">Poprawne odpowiedzi: %1$d</string>
    <string name="wrong_answers_with_value">Błędne odpowiedzi: %1$d</string>
    <string name="no_data">Brak danych</string>
    <string name="total_quizzes_with_value">Ukończone quizy: %1$d</string>
    <string name="last_result_summary">Poprawne: %1$d / Błędne: %2$d</string>
    <string name="quiz_result_summary">Poprawnych: %1$d / %2$d</string>
    <string name="new_flashcards">Nowe fiszki</string>
    <string name="save">Zapisz</string>
    <string name="deck_name">Nazwa zestawu</string>
    <string name="end_browsing">Zakończ przeglądanie</string>
    <string name="tap_to_flip">Kliknij fiszkę, aby ją odwrócić</string>
    <string name="ongrats_all_cards_viewed">Gratulacje! Obejrzałeś wszystkie fiszki</string>
    <string name="play_again">Zagraj ponownie</string>
    <string name="go_to_home">Przejdź do ekranu głównego</string>
    <string name="add_deck">Dodaj zestaw</string>
    <string name="add_flash_cards">Dodaj fiszkę</string>
    <string name="definition">Definicja</string>
    <string name="explanation">Wyjaśnienie</string>
    <string name="front">Przód</string>
    <string name="back">Tył</string>
    <string name="i_know">Umiem</string>
    <string name="i_dont_know">Nie umiem</string>
    <string name="learning_session_completed">Brawo! Ukończono sesję nauki 🎉</string>
    <string name="return_to_home">Wróć do ekranu głównego</string>
    <string name="result">Wynik</string>
    <string name="view_stats">Zobacz statystyki</string>
    <string name="summary">Podsumowanie</string>
    <string name="quizzes_played">Rozegrane quizy: 0</string>
    <string name="correct_answers">Poprawne odpowiedzi: 0</string>
    <string name="wrong_answers">Błędne odpowiedzi: 0</string>
    <string name="last_result">Ostatni wynik</string>
    <string name="flashcard">Fiszka</string>
    <string name="both_fields_required">Oba pola muszą być wypełnione</string>
    <string name="card_updated">Fiszka zaktualizowana</string>
    <string name="enter_deck_name">Podaj nazwę zestawu</string>
    <string name="card_deleted">Fiszka usunięta</string>
    <string name="rename">Zmień nazwę</string>
    <string name="delete_deck">Usuń zestaw</string>
    <string name="confirm_delete_deck">Are you sure you want to delete the deck "%1$s"?</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="deck_deleted">Zestaw usunięty</string>
    <string name="rename_deck">Zmień nazwę zestawu</string>
    <string name="name_cannot_be_empty">Nazwa nie może być pusta</string>
    <string name="deck_renamed_to">Renamed to "%1$s"</string>
    <string name="cancel">Anuluj</string>
    <string name="no_flashcard_sets">Brak zestawów fiszek</string>
    <string name="no_flashcards_in_deck">Brak fiszek w zestawie</string>

    <string name="total_flashcards_with_value">Liczba fiszek: %1$d</string>
    <string name="hardest_card_with_value">Najtrudniejsza fiszka: %1$s (%2$d× \"Nie umiem\")</string>
    <string name="hardest_card_none">Najtrudniejsza fiszka: brak</string>
    <string name="success_rate_with_value">Skuteczność: %1$d%%</string>

    <string name="classic_sessions_with_value">Sesje klasyczne: %1$d</string>
    <string name="choose_deck">Wybierz zestaw</string>
    <string name="classic_mode">Tryb klasyczny</string>
    <string name="quiz_summary">Podsumowanie quizu</string>
    <string name="edit_flashcard">Edytuj fiszkę</string>
    <string name="quiz">Quiz</string>
    <string name="browse_decks">Przeglądaj zestawy</string>
    <string name="flashcards">Fiszki</string>
    <string name="end_of_browsing">Zakończ przeglądanie</string>
</resources>