<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ongrats_all_cards_viewed"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="24dp"/>

        <Button
            android:id="@+id/button_play_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_again"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/button_go_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_home"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>